Bug fixes and other updates

--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -369,6 +369,7 @@
     "Common.text.suggestions": "Vorschläge",
     "Common.text.total": "Insgesamt",
     "Common.text.yes": "Ja",
+    "Common.text.modify": "Anpassen",
     "Common.text.no": "Nein",
     "Common.text.other": "Andere",
 
