--- a/WebTools/src/i18n/locales/fr/translations.json
+++ b/WebTools/src/i18n/locales/fr/translations.json
@@ -398,6 +398,7 @@
     "Common.text.suggestions": "Suggestions",
     "Common.text.total": "Total",
     "Common.text.yes": "Oui",
+    "Common.text.modify": "Modifier",
     "Common.text.no": "Non",
     "Common.text.other": "Autre",
 
