--- a/WebTools/src/i18n/locales/pt-BR/translations.json
+++ b/WebTools/src/i18n/locales/pt-BR/translations.json
@@ -430,6 +430,7 @@
     "Common.text.suggestions": "Sugestões",
     "Common.text.total": "Total",
     "Common.text.yes": "Sim",
+    "Common.text.modify": "Modificar",
     "Common.text.no": "Não",
     "Common.text.other": "Outro",
 
