--- a/WebTools/src/i18n/locales/ru/translations.json
+++ b/WebTools/src/i18n/locales/ru/translations.json
@@ -179,7 +179,7 @@
 
     "OtherToolsPage.instruction": "Эта категория содержит несколько дополнительных инструментов которые могут быть использованы в вашей игре.",
 
-    "OtherToolsPage.safetyChecklist.instruction": "Этот контрольный списоу представляет собой инструмент, который Мастер может использовать, помогая игрокам обсудить их личные границы для определенных тем в этой кампании. Он разделен на несколько категорий, каждая из которых включает в себя ряд тем. Данная онлайн версия \"списка согласия\" может позволить Мастерам и/или игрокам обдумать темы и оценить, как они хотят, чтобы эти темы отражались в игре.",
+    "OtherToolsPage.safetyChecklist.instruction": "Этот контрольный список представляет собой инструмент, который Мастер может использовать, помогая игрокам обсудить их личные границы для определенных тем в этой кампании. Он разделен на несколько категорий, каждая из которых включает в себя ряд тем. Данная онлайн версия \"списка согласия\" может позволить Мастерам и/или игрокам обдумать темы и оценить, как они хотят, чтобы эти темы отражались в игре.",
 
     "PromotionPage.instruction": "Выберите новый ранг для персонажа",
 
@@ -315,6 +315,7 @@
     "Common.text.suggestions": "Предложения",
     "Common.text.total": "Всего",
     "Common.text.yes": "Да",
+    "Common.text.modify": "Изменить",
     "Common.text.no": "Нет",
     "Common.text.other": "Другое",
 
@@ -879,7 +880,7 @@
     "SafetySection.category.imprisonmentRestraint": "Заключение под стражу или ограничение свободы",
     "SafetySection.category.noPersonalAgency": "Отсуствие свободы воли или способности влиять на события",
     "SafetySection.category.mentalAbuse": "Психическое насилие или оперантное обусловливание",
-    "SafetySection.category.stranded": "Застрял, позвать на помощь",
+    "SafetySection.category.stranded": "Застрял, невозможность позвать на помощь",
     "SafetySection.category.biologicalWeapons": "Биологическое оружие",
     "SafetySection.category.desecrationOfBodies": "Осквернение тел",
     "SafetySection.category.execution": "Казнь",
