preparation for new character sheet

--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -1600,6 +1600,7 @@
     "Sheet.generatedTngPortraitA4CharacterSheet": "TNG Portrait Character Sheet (A4)",
     "Sheet.halfPageSupportingCharacterSheet": "Half-Page Supporting Character Sheet",
     "Sheet.landscapeGeneratedCharacterSheet": "TNG Landscape Character Sheet (US-Letter)",
+    "Sheet.landscape2eCharacterSheet": "New Landscape 2nd Ed.-style Character Sheet (US-Letter)",
     "Sheet.standardTngCharacterSheet": "Standard TNG Character Sheet (US-Letter)",
     "Sheet.standard2eCharacterSheet": "Standard 2nd Ed. Character Sheet (US-Letter)",
 
