--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -1892,6 +1892,7 @@ Sheet.generatedTngPortraitCharacterSheet,TNG Portrait Character Sheet (US-Letter
 Sheet.generatedTngPortraitA4CharacterSheet,TNG Portrait Character Sheet (A4),,,,,,Ficha de personagem retrato da TNG (A4)
 Sheet.halfPageSupportingCharacterSheet,Half-Page Supporting Character Sheet,,,,Feuille de personnage de soutien (demi page),Бланк вспомогательного персонажа на пол листа,Ficha de personagem de Apoio de meia página
 Sheet.landscapeGeneratedCharacterSheet,TNG Landscape Character Sheet (US-Letter),,,,Feuille de personnage TNG (format lettre US paysage),Альбомный бланк персонажа TNG (US-Letter),Ficha de Personagem Paisagem da TNG (US-Letter)
+Sheet.landscape2eCharacterSheet,New Landscape 2nd Ed.-style Character Sheet (US-Letter),,,,,,
 Sheet.standardTngCharacterSheet,Standard TNG Character Sheet (US-Letter),,,,Feuille de personnage TNG standard (format lettre US),Стандартный бланк персонажа TNG (US-Letter),Ficha de personagem padrão de TNG (US-Letter)
 Sheet.standard2eCharacterSheet,Standard 2nd Ed. Character Sheet (US-Letter),,,,,,
 Sheet.text.title,Starfleet Personnel Record,,,Registro de personal de la Flota Estelar,Registre personnel de Starfleet,Бланк персонажа,Registro de pessoal da Frota Estelar
