--- a/WebTools/src/i18n/locales/pt-BR/translations.json
+++ b/WebTools/src/i18n/locales/pt-BR/translations.json
@@ -451,6 +451,8 @@
     "Construct.other.careerEvent2.short": "Evento 2",
 
     "Construct.other.careerEvents": "Eventos de Carreira",
+    "Construct.other.careerPath": "Caminho de Carreira",
+    "Construct.other.characterRole": "Papel de Personagem",
     "Construct.other.characterType": "Tipo de Personagem",
     "Construct.other.crew": "Tripulação",
     "Construct.other.crewSupport": "Tripulação de Apoio",
@@ -463,6 +465,7 @@
     "Construct.other.environment": "Ambiente",
     "Construct.other.equipment": "Equipamento",
     "Construct.other.era": "Era",
+    "Construct.other.experience": "Experiência",
     "Construct.other.focus": "Foco",
     "Construct.other.focus1": "Foco 1",
     "Construct.other.focus2": "Foco 2",
@@ -500,6 +503,7 @@
     "Construct.other.specialRules": "Regras Especiais",
     "Construct.other.species": "Espécies",
     "Construct.other.speciesAbility": "Habilidade de Espécie",
+    "Construct.other.speciesAndTraits": "Espécies e Traços",
     "Construct.other.starshipType": "Tipo de Nave",
     "Construct.other.stats": "Estatísticas",
     "Construct.other.stress": "Estresse",
