--- a/WebTools/src/i18n/locales/ru/translations.json
+++ b/WebTools/src/i18n/locales/ru/translations.json
@@ -870,7 +870,7 @@
     "SafetySection.category.hateCrimes": "Целенаправленные преступления на почве ненависти, вред представителям меньшинств",
     "SafetySection.category.traitorMechanicsPvP": "Механика предательства/Игрок против игрока (PvP)",
     "SafetySection.category.speciesHate": "Целенаправленная ненависть против других расс (Клингоны, Люди и т.п.)",
-    "SafetySection.category.homophobia": "Гомофобия/Трансфобия",
+    "SafetySection.category.homophobia": "Гомофобия/Трансофобия",
     "SafetySection.category.racism": "Расизм (внутри своей рассы)",
     "SafetySection.category.religiousIntolerance": "Религиозная нетерпимость",
     "SafetySection.category.sexism": "Сексизм",
